--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,13 @@ edition = "2021"
 [dependencies]
 tonic = "0.12.3"
 prost = "0.13.4"
-tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.43.0", features = ["full"] }
 tonic-reflection = "0.12.3"
 gphoto2 = "3.3.1"
 futures = "0.3"
-
+axum = "0.8.3"
+tower = "0.5.2"
+async-stream = "0.3.6"
 
 [build-dependencies]
 tonic-build = "0.12.3"
